[gd_scene load_steps=5 format=3 uid="uid://0cr7bpouj6h1"]

[ext_resource type="PackedScene" uid="uid://xyyuqu4gxd2t" path="res://Scenes/CombatScenes/mini_enemy_plant.tscn" id="1_urxq5"]
[ext_resource type="Texture2D" uid="uid://dcongktilq175" path="res://Assets/Effects/secret_boss_vine_whip.png" id="2_5f8n1"]
[ext_resource type="Script" path="res://Scenes/CombatScenes/secret_boss_enemy.gd" id="2_vlyr1"]
[ext_resource type="Texture2D" uid="uid://boc4g4pv8lb3q" path="res://Assets/Characters/TerryButSmall.png" id="3_layhn"]

[node name="miniEnemy" instance=ExtResource("1_urxq5")]
script = ExtResource("2_vlyr1")

[node name="Sprite2D" parent="." index="0"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_layhn")

[node name="ShootTimer" parent="." index="2"]
wait_time = 0.3

[node name="SpreadTimer" parent="." index="4"]
wait_time = 3.0

[node name="Node2D" parent="WhipAttack" index="0"]
rotation = 2.35619

[node name="WhipSprite" parent="WhipAttack/Node2D" index="0"]
texture = ExtResource("2_5f8n1")

[node name="CollisionPolygon2D" parent="WhipAttack/Node2D/WhipSprite/WhipHitbox" index="0"]
disabled = false

[node name="WhipTimer" parent="." index="7"]
wait_time = 7.0
